--- a/assets/code/styles.css
+++ b/assets/code/styles.css
@@ -1,22 +1,45 @@
+@import url("https://use.typekit.net/hnx8rum.css");
+
+
+
+body,
+html {
+    margin: 0;
+    padding: 0;
+    font-family: "grenadine-mvb", sans-serif;
+    font-weight: 400;
+    letter-spacing: 1.5px;
+    line-height: 1.6rem;
+    font-size: 1rem;
+}
+
+
+.home {
+    position: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .cheese-conveyor {
-    position: fixed;
+    position: absolute;
     bottom: 100px;
     left: 0;
     width: 100%;
-    height: 120px;
-    overflow: hidden; /* hide extra image overflow */
+    height: 140px;
+    overflow: hidden;
     z-index: -1;
 }
 
 .conveyor-track {
     display: flex;
-    width: max-content; /* allow track to expand as needed */
-    animation: conveyorMove 40s linear infinite;
+    width: max-content;
+    animation: conveyorMove 60s linear infinite;
 }
 
 .conveyor-track img {
-    height: 120px; /* match container height */
-    width: auto;   /* keep aspect ratio */
+    height: 140px;
+    width: auto;
 }
 
 /* Animate track moving left continuously */
@@ -24,8 +47,9 @@
     0% {
         transform: translateX(0);
     }
+
     100% {
-        transform: translateX(-50%); /* move half of track */
+        transform: translateX(-50%);
     }
 }
 
@@ -34,7 +58,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70vh;
+    flex-direction: column;
+    height: 67.5vh;
 }
 
 h1 {
@@ -42,11 +67,171 @@ h1 {
     font-size: 10rem;
 }
 
-
-@font-face {
-  font-family: "Rats";
-  src: url("../fonts/RatsVF.ttf") format("truetype");
-  font-weight: 0 100;
-  font-style: normal;
+.title p {
+    font-size: 1.2rem;
+    line-height: 0rem;
+    margin-top: 0.5rem;
 }
 
+
+.blue-triangle1 {
+    position: absolute;
+    top: calc(100vh - 110px);
+    right: 0;
+    width: 115%;
+    height: 100vh;
+    background: #d5c2a8;
+    clip-path: polygon(100% 0%, 0% 100%, 100% 100%);
+    z-index: -2;
+}
+
+.blue-triangle2 {
+    position: absolute;
+    top: calc((100vh - 111px) + 100vh);
+    right: 0;
+    width: 115%;
+    height: 100vh;
+    background: #d5c2a8;
+    clip-path: polygon(100% 100%, 0% 0%, 100% 0%);
+    z-index: -2;
+}
+
+.btn {
+    position: absolute;
+    top: 35px;
+    right: 40px;
+    background: rgb(25, 77, 233);
+    color: white;
+    border: white 2.5px solid;
+    padding: 0.5rem 1rem;
+    font-family: "grenadine-mvb", sans-serif;
+    font-size: 1rem;
+    letter-spacing: 1.5px;
+    line-height: 1.6rem;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.15s ease;
+    box-sizing: border-box;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+}
+
+.btn:active {
+    transform: translateY(0px);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+}
+
+.content {
+    position: relative;
+    display: flex;
+    flex: 1;
+    align-items: flex-start;
+    padding: 4rem 2rem;
+}
+
+.mouse-trap {
+    flex: 1;
+}
+
+.info {
+    flex: 1;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: left;
+    padding: 14rem 4rem;
+    z-index: 2;
+}
+
+
+.text h2 {
+    font-size: 5rem;
+    margin-bottom: 3rem;
+    font-family: "Rats";
+}
+
+.text p {
+    font-size: 1.2rem;
+    line-height: 1.6;
+}
+
+.info .img-container {
+    padding: 2rem 0;
+}
+
+.info .img-container img {
+    height: 35vh;
+    width: auto;
+}
+
+.auto-color {
+    mix-blend-mode: difference;
+}
+
+
+/* Responsive phone */
+@media (max-width: 900px) {
+    .row {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .text {
+        max-width: 100%;
+        margin-bottom: 2rem;
+    }
+
+    .row img {
+        max-width: 70%;
+    }
+}
+
+
+.mouse-trap {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    height: 210vh; 
+    margin: 12rem 0;
+}
+
+
+.trap-base {
+    position: absolute;
+    top: 10px;
+    z-index: 1;
+    height: 160vh;
+    width: 20px;
+}
+
+
+.trap-mouse {
+    position: absolute;
+    bottom: 18rem; 
+    left: 50%;
+    transform: translateX(-50%);
+    height: 7rem;
+    z-index: 2;
+}
+
+
+.trap-cup {
+    position: sticky;
+    left: auto;
+    top: -5px;
+    height: 12.5rem;
+    z-index: 3;
+}
+
+
+@font-face {
+    font-family: "Rats";
+    src: url("../fonts/RatsVF.ttf") format("truetype");
+    font-weight: 0 100;
+    font-style: normal;
+}
