--- a/assets/code/styles.css
+++ b/assets/code/styles.css
@@ -11,8 +11,13 @@ html {
     letter-spacing: 1.5px;
     line-height: 1.6rem;
     font-size: 1rem;
+    scroll-behavior: smooth;
 }
 
+
+a{
+    text-decoration: none;
+}
 
 .home {
     position: block;
@@ -104,8 +109,10 @@ h1 {
     color: white;
     border: white 2.5px solid;
     padding: 0.5rem 1rem;
+    min-width: 11.2rem;
     font-family: "grenadine-mvb", sans-serif;
     font-size: 1rem;
+    text-align: center;
     letter-spacing: 1.5px;
     line-height: 1.6rem;
     border-radius: 30px;
@@ -130,6 +137,7 @@ h1 {
     flex: 1;
     align-items: flex-start;
     padding: 4rem 2rem;
+    padding-bottom: 3rem;
 }
 
 .mouse-trap {
@@ -145,6 +153,7 @@ h1 {
     justify-content: center;
     text-align: left;
     padding: 14rem 4rem;
+    padding-bottom: 8rem;
     z-index: 2;
 }
 
@@ -169,35 +178,13 @@ h1 {
     width: auto;
 }
 
-.auto-color {
-    mix-blend-mode: difference;
-}
-
-
-/* Responsive phone */
-@media (max-width: 900px) {
-    .row {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .text {
-        max-width: 100%;
-        margin-bottom: 2rem;
-    }
-
-    .row img {
-        max-width: 70%;
-    }
-}
-
 
 .mouse-trap {
     position: relative;
     display: flex;
     justify-content: center;
-    height: 210vh; 
-    margin: 12rem 0;
+    height: 170vh;
+    margin-top: 12rem;
 }
 
 
@@ -212,7 +199,7 @@ h1 {
 
 .trap-mouse {
     position: absolute;
-    bottom: 18rem; 
+    bottom: 5px;
     left: 50%;
     transform: translateX(-50%);
     height: 7rem;
@@ -226,6 +213,128 @@ h1 {
     top: -5px;
     height: 12.5rem;
     z-index: 3;
+}
+
+.font-item {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    height: fit-content;
+    width: 90vw;
+    align-items: flex-start;
+    box-sizing: border-box;
+    padding: 0rem 3rem;
+    width: 100vw;
+}
+
+.font-preview-wrapper {
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+
+.font-preview {
+    display: flex;
+    font-size: 8rem;
+    font-family: "Rats";
+    line-height: normal;
+    overflow-wrap: anywhere;
+    outline: none;
+}
+
+.font-preview.placeholder {
+    color: rgba(43, 43, 43, 0.5);
+    /* semi-transparent */
+}
+
+.font-controls {
+    display: flex;
+    position: relative;
+    top: 0;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 100;
+    padding-bottom: 2rem;
+}
+
+.download {
+    display: flex;
+    align-items: center;
+    padding: 0 2px;
+    gap: 2rem;
+}
+
+.download p {
+    font-size: 1.3rem;
+    line-height: 1.6;
+    color: rgb(25, 77, 233);
+}
+
+
+.btn-download {
+    position: relative;
+    background: rgb(25, 77, 233);
+    color: white;
+    border: white 2.5px solid;
+    padding: 0.5rem 1rem;
+    min-width: 11.2rem;
+    font-family: "grenadine-mvb", sans-serif;
+    text-align: center;
+    font-size: 1rem;
+    letter-spacing: 1.5px;
+    line-height: 1.6rem;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.15s ease;
+    box-sizing: border-box;
+}
+
+.btn-download:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+}
+
+.btn-download:active {
+    transform: translateY(0px);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+}
+
+
+.weight-slider {
+    width: 200px;
+    -webkit-appearance: none;
+    appearance: none;
+    height: 8px;
+    background: rgba(43, 43, 43, 0.2);
+    border-radius: 2px;
+    outline: none;
+    cursor: pointer;
+}
+
+.weight-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 24px;
+    background: rgba(43, 43, 43, 0.75);
+    border-radius: 2px;
+
+}
+
+.weight-slider:hover::-webkit-slider-thumb {
+    background: rgba(43, 43, 43, 1);
+}
+
+
+.footer {
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: left;
+    padding: 0.5rem 2.25rem;
+    padding-top: 2rem;
 }
 
 
